--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.10",
         "@vitejs/plugin-react": "^4.2.0",
+        "autoprefixer": "^10.4.23",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
+        "postcss": "^8.5.6",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "typescript": "^5.0.2",
